<resources>
    <string name="app_name">Baazar</string>
    <string name="baazar">baazar</string>
    <string name="store_slogan">Easier than you think</string>
    <string name="logo_store">Logo Store</string>
    <string name="sign_in">Sign In</string>
    <string name="take_a_look">Take a look</string>
    <string name="logo">logo</string>
    <string name="password">password</string>
    <string name="email_domain_com">email@domain.com</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="lock">lock</string>
    <string name="email">email</string>
</resources>